src/test/resources/typeSystemTestModels/valid/enums/EnumMayNotBeAbstract.java
package typeSystemTestModels.valid.enums;

public enum EnumMayNotBeAbstract {

}