src/test/resources/typeSystemTestModels/invalid/enums/EnumMayNotBeAbstract.java
package typeSystemTestModels.invalid.enums;

abstract enum EnumMayNotBeAbstract{

}